--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -13,6 +13,12 @@
         <div></div>
         <div></div>
         <div></div>
-    </div>    
+    </div>  
+    <div class="verde">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>  
 </body>
 </html>
