Terceira linha (laranja) organizando identação

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,28 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
-<div class="roxo">
+    <div class="roxo">
         <div></div>
         <div></div>
         <div></div>
         <div></div>
-    </div>  
+    </div>
+
     <div class="verde">
         <div></div>
         <div></div>
         <div></div>
         <div></div>
-    </div>  
+    </div>
+
+    <div class="laranja">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 </body>
+
 </html>
