Quartalinha (amarelo), incluindo gap nas linhas, alteração na primeira linha

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
         <div></div>
         <div></div>
     </div>
+
+    <div class="amarelo">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 </body>
 
 </html>
