Quinta linha, alteração na linha amarela

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
         <div></div>
         <div></div>
     </div>
+
+    <div class="azul">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 </body>
 
 </html>
